scraper-results-old/coastalJazzEvents.log
ERROR: Command failed: node test-single-scraper.js coastalJazzEvents.js

❌ A critical error occurred in the test runner for coastalJazzEvents.js:
/Users/seongwoohan/CascadeProjects/discovr-api-server/scrapers/cities/vancouver/coastalJazzEvents.js:276
  extractFestivalDates(festivalInfo) {
                                     ^

SyntaxError: Unexpected token '{'
    at wrapSafe (node:internal/modules/cjs/loader:1666:18)
    at Module._compile (node:internal/modules/cjs/loader:1708:20)
    at Object..js (node:internal/modules/cjs/loader:1899:10)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1491:12)
    at require (node:internal/modules/helpers:135:16)
    at runTest (/Users/seongwoohan/CascadeProjects/discovr-api-server/test-single-scraper.js:23:27)


============================================================
--- Attempting to run scraper: coastalJazzEvents.js ---
============================================================



❌ A critical error occurred in the test runner for coastalJazzEvents.js:
/Users/seongwoohan/CascadeProjects/discovr-api-server/scrapers/cities/vancouver/coastalJazzEvents.js:276
  extractFestivalDates(festivalInfo) {
                                     ^

SyntaxError: Unexpected token '{'
    at wrapSafe (node:internal/modules/cjs/loader:1666:18)
    at Module._compile (node:internal/modules/cjs/loader:1708:20)
    at Object..js (node:internal/modules/cjs/loader:1899:10)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1491:12)
    at require (node:internal/modules/helpers:135:16)
    at runTest (/Users/seongwoohan/CascadeProjects/discovr-api-server/test-single-scraper.js:23:27)
